Ch 4: CI/CD (#3)
* fix: added detekt and ktlint; fixed errors

* feat: added lintKotlin gradlew task

* test: separated unit from integration tests; added gradlew tests

* wip ci/cd

* wip github action

* fixed ci dependencies errors

* fix: build.gradle.kts formatting

* fix: integration and unit test, syntax

* feat: added publishImage

* fix: repo name

* feat: publish image from docker-compose.astra

* fix: publishImage with platforms

* fix: run flow only on main branch

* wip ci/cd

* wip ci/cd checking lint

* fix: StatsService syntax

* fix: review fixes

* fix: removed unused file